# TerminalTunes

./: .clang-format  CMakeLists.txt  README.md
include/Audio-player/: Album.hpp  AudioPlayer.hpp  FileManager.hpp  MusicLibrary.hpp  Playlist.hpp  Song.hpp  UserInterface.hpp
src/: Album.cpp  AudioPlayer.cpp  FileManager.cpp  MusicLibrary.cpp  Playlist.cpp  Song.cpp  UserInterface.cpp  main.cpp
tests/: AlbumTest.cpp
